[package]
name = "js"
version = "0.1.4"
authors = ["The Servo Project Developers"]
build = "build.rs"
license = "MPL-2.0"

[build-dependencies]
bindgen = "0.25.2"
cmake = "0.1"
glob = "0.2.11"

[[test]]
name = "attr"
[[test]]
name = "callback"
[[test]]
name = "element"
[[test]]
name = "enumerate"
[[test]]
name = "evaluate"
[[test]]
name = "dompointreadonly"
[[test]]
name = "dom_point"
[[test]]
name = "dom_quad"
[[test]]
name = "htmlelement"
[[test]]
name = "node"
[[test]]
name = "node_child"
[[test]]
name = "panic"
[[test]]
name = "rooting"
[[test]]
name = "runtime"
[[test]]
name = "typedarray"
[[test]]
name = "stack_limit"
[[test]]
name = "vec_conversion"

[lib]
doctest = false

[features]
debugmozjs = ['mozjs_sys/debugmozjs']
promises = ['mozjs_sys/promises']
native_method = []
native_array = []

[dependencies.mozjs_sys]
path = "../src"

[dependencies]
lazy_static = "0.2.1"
libc = "0.2"
log = "0.3"
heapsize = ">=0.2, <0.4"
num-traits = "0.1.32"
magic_codegen = { path = "magic_codegen" }
time = "0.1"
